Fix timeshift select width on tablet screen size

--- a/sass/blocks/_boss-time-shift.sass
+++ b/sass/blocks/_boss-time-shift.sass
@@ -82,14 +82,25 @@ $block: ".boss-time-shift"
     @media screen and (max-width: 1280px)
       flex-direction: column
 
+      #{$block}__log_layout_break &
+        flex-grow: 1
+        flex-direction: row
+        width: 100%
+
     @media screen and (max-width: 1120px)
       flex-direction: row
+
+      #{$block}__log_layout_break &
+        flex-grow: 0
+        flex-direction: row
+        width: auto
 
     @media screen and (max-width: 960px)
       flex-direction: column
 
       #{$block}__log_layout_break &
         flex-grow: 1
+        flex-direction: row
         width: 100%
 
     @media screen and (max-width: 400px)
